--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ docs_test:
     paths:
     - test
   except:
-  - master
+  - main
 
 pages:
   stage: deploy
@@ -18,5 +18,5 @@ pages:
     paths:
     - public
   only:
-  - master
+  - main
 
