--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,9 +21,10 @@ pages:
   stage: deploy
   script:
   - mkdocs build --strict --verbose
+  - mv site public
   artifacts:
     paths:
-    - site
+    - public
   only:
   - main
 
