--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,12 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 image: python:3.8-buster
+
 before_script:
-- pip install mkdocs
-- pip install mkdocs-material
-- pip install pymdown-extensions
-- pip install pyembed-markdown
+  - pip install mkdocs
+  - pip install mkdocs-material
+  - pip install pymdown-extensions
+  - pip install pyembed-markdown
+
+
 docs_test:
   stage: test
   script:
@@ -20,8 +16,9 @@ docs_test:
     - test
   except:
   - main
+
 pages:
-  stage: post
+  stage: deploy
   script:
   - mkdocs build --strict --verbose
   - mv site public
@@ -32,6 +29,7 @@ pages:
   - main
 stages:
 - test
+- deploy
 sast:
   stage: test
 include:
