exchange "sandbox" with "environments" and include additional documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
   - Guides:
     - Introduction: guide_intro.md
     - Overview: guide_overview.md
-    - Sandbox: guide_sandbox.md
+    - Environments: guide_sandbox.md
     - Codelists: guide_codelists.md
     - CRF: guide_crf.md
     - Study Structure: guide_study_structure.md
