--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - CRF: guide_crf.md
     - Manage studies: guide_manage_studies.md
     - Study Structure: guide_study_structure.md
+    - Visits: guide_visits.md
     - Activity Concept: guide_activity_concept.md
     - API: guide_api.md
   - FAQ:
