--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
     - Environments: info_environment.md
     - Costs: info_costs.md
     - Resources: info_resources.md
+    - Newsletter: info_newsletter.md
   - Guides:
     - Introduction: guide_intro.md
     - Overview: guide_overview.md
