--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,9 +12,10 @@ nav:
     - Status: status.md
     - Events: info_events.md
     - Past Events: info_events_past.md
-    - DDF Context: info_ddf.md
     - Environments: info_environment.md
     - Costs: info_costs.md
+    - DDF Context: info_ddf.md
+    - Integrations: info_integrations.md
     - Resources: info_resources.md
     - Newsletter: info_newsletter.md
   - Guides:
