--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
     - Environments: info_environment.md
     - Costs: info_costs.md
     - Integrations: info_integrations.md
+    - Services: info_services.md
     - Resources: info_resources.md
     - Newsletter: info_newsletter.md
   - Guides:
