--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
     - Study Structure: guide_study_structure.md
     - Visits: guide_visits.md
     - Activity Concept: guide_activity_concept.md
+    - Beyond Concepts: guide_beyond_concepts.md
     - Activity Dashboard: guide_bc_dashboard.md
     - API: guide_api.md
   - FAQ:
