update events and include contribution information

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
     - Status: status.md
     - Events: info_events.md
     - Past Events: info_events_past.md
+    - Contribution: info_contribution.md
     - OSB Hub: info_osb_hub.md
     - DDF Vision: info_ddf_vision.md
     - DDF Context: info_ddf.md
