--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - Newsletter: info_newsletter.md
     - Demonstrations:
       - Library: info_demo.md
+      - Create Study: info_demo_study_create.md
   - Guides:
     - Introduction: guide_intro.md
     - Overview: guide_overview.md
